CoqOfSolidity/test/libsolidity/semanticTests/errors/error_in_library_and_interface.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Error E *)

(* Library *)
Module L.
  (* Error E *)
End L.


(* Interface *)
Module I.
  (* Error E *)
End I.


(* Contract *)
Module C.
  Definition f (α : list Value.t) : M :=
    match α with
    | [] =>
      let _ :=
        M.revert (|
          M.call (|
            M.get_name (| "E" |),
            [
              Value.Integer 1
            ]
          |)
        |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.

  Definition g (α : list Value.t) : M :=
    match α with
    | [] =>
      let _ :=
        M.revert (|
          M.call (|
            M.member_access (|
              M.get_name (| "L" |),
              "E"
            |),
            [
              Value.Integer 1,
              Value.Integer 2
            ]
          |)
        |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.

  Definition h (α : list Value.t) : M :=
    match α with
    | [] =>
      let _ :=
        M.revert (|
          M.call (|
            M.member_access (|
              M.get_name (| "I" |),
              "E"
            |),
            [
              Value.Integer 1,
              Value.Integer 2,
              Value.Integer 3
            ]
          |)
        |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.
End C.
